--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,8 @@ services:
     command: uv run python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/app
+      - ./static:/app/static
+      - ./media:/app/media
     ports:
       - "8000:8000"
     depends_on:
