--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
+    "crispy-bootstrap5>=2025.6",
     "django>=5.2.8",
+    "django-crispy-forms>=2.5",
     "dotenv>=0.9.9",
     "pillow>=12.0.0",
     "psycopg2-binary>=2.9.11",
+    "requests>=2.32.5",
 ]
