--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,8 @@ services:
 
   web:
     container_name: letterboxd
+    env_file:
+      - .env
     build: .
     command: uv run python manage.py runserver 0.0.0.0:8000
     volumes:
